--- a/Home Work/JS Home Work 9/Task 5 additional/style-5.css
+++ b/Home Work/JS Home Work 9/Task 5 additional/style-5.css
@@ -1,1 +1,18 @@
 /*Дописати стилі*/
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.duration{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.month{
+    padding-right: 16px;;
+}
